@@ -10,6 +10,14 @@ module Spec
         @name = name
         @options = options
       end
+      
+      # This allows for comparing the mock to other objects that proxy
+      #  such as ActiveRecords belongs_to proxy objects
+      #  By making the other object run the comparison, we're sure the call gets delegated to the proxy target
+      # This is an unfortunate side effect from ActiveRecord, but this should be safe unless the RHS redefines == in a nonsensical manner
+      def ==(other)
+        other == __mock_proxy
+      end
 
       def method_missing(sym, *args, &block)
         __mock_proxy.instance_eval {@messages_received << [sym, args, block]}
